# robo-identities

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/: dependabot.yml
robo-identities-java/: Cargo.toml
robo-identities-java/src/: lib.rs
robo-identities-wasm/: Cargo.toml  Dockerfile  README.md
robo-identities-wasm/src/: lib.rs
robo-identities-wasm/tests/: web.rs
robohash/: .gitignore  Cargo.toml  LICENSE  README.md
robohash/benches/: benchmark.rs
robohash/scripts/: collect_parts.py  requirements.txt
robohash/src/: backgrounds.rs  error.rs  hash.rs  image.rs  lib.rs  main.rs  materials.rs  robot_parts.rs
robohash/test_resources/: image.txt  test.txt  test_set1_None_bg1.txt
robonames/: Cargo.toml
robonames/src/: lib.rs
robonames/src/dicts/: mod.rs
robonames/src/dicts/_es/: _adjectives.rs  _adverbs.rs  _nouns.rs
robonames/src/dicts/en/: _adverbs.rs  adjectives.rs  mod.rs  nouns.rs
wasm/: Cargo.toml  LICENSE
wasm/src/: lib.rs
wasm/tests/: web.rs
